--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular-intercom",
+  "name": "angular-intercom-mini",
   "version": "0.0.0",
-  "homepage": "https://github.com/maxiperezc/angular-intercom",
+  "homepage": "https://github.com/maxiperezc/angular-intercom-mini",
   "authors": [
     "Maximiliano Perez Coto <maxiperezc@gmail.com>"
   ],
