--- a/bower.json
+++ b/bower.json
@@ -18,9 +18,9 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
-  ],
-  "dependencies": {
-    "angular": "~1.0.4"
-  }
+    "tests",
+    "LICENSE",
+    "README.md",
+    "example.html"
+  ]
 }
